fix tree node alignment

--- a/app/tree/tree.component.scss
+++ b/app/tree/tree.component.scss
@@ -2,17 +2,26 @@
     max-height: 80.6vh;
     overflow-y: auto;
 }
+
 .eos-tree-node {
+    margin-bottom: 8px;
     padding-left: 15px;
+    position: relative;
 
     &>div {
         display: inline-block;
         width: 15px;
     }
 
+    i {
+        position: absolute;
+        top: 3px;
+    }
+
     span {
         cursor: pointer;
         display: inline-block;
+        margin-left: 15px;
 
         &.active {
             background-color: #8899bc;
